--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="icon" type="image/png" href="A.jpg"/>
     <link rel="stylesheet" href="style.css" />
     <title>Expense Tracker</title>
   </head>
@@ -48,7 +49,18 @@
         <button class="btn">Add transaction</button>
       </form>
     </div>
+    <div class="footer">
+      <div class="footerDesc">Designed and Developed by Abir Ahmad Ajazi &nbsp;</div>
+      <div class="footerSocial">
+          <a href="https://www.linkedin.com/in/abir-ahmad-ajazi-630854157/" target="_blank" title="Linkedin">
+              <img src="linkedIn_logo.png" alt="Linkedin">
+          </a>
 
+          <a href="https://github.com/the-revolutionary2018?tab=repositories" target="_blank" title="Github">
+              <img src="github_icon.png" alt="GitHub">
+          </a>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
